--- a/index.html
+++ b/index.html
@@ -11,17 +11,18 @@
   <!-- custom css link  -->
   <link rel="stylesheet" href="styles/custom.css">
 </head>
+
 <body class="container-lg">
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Biker-ZoneBD</a>
+        <a class="navbar-brand fw-bolder " href="#">Biker-ZoneBD</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fw-semibold">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
@@ -42,6 +43,67 @@
         </div>
       </div>
     </nav>
+    <!-- banner carousel -->
+    <div id="carouselExample" class="carousel slide  bg-danger-subtle bg-opacity-10  p-5">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <div class="row">
+            <div class="col-12 col-md-6 d-flex justify-content-center align-items-center">
+              <div>
+                <h1>Ride-on R15 V4 with Smile</h1>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.velit officia consequat duis
+                  enim velit
+                  mollit.</p>
+                <button class="btn btn-danger">Purchase</button>
+              </div>
+            </div>
+            <div class="col-12 col-md-6">
+              <img src="images/bike-1.png" class="d-block w-100" alt="...">
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item ">
+          <div class="row">
+            <div class="col-12 col-md-6 d-flex justify-content-center align-items-center">
+              <div>
+                <h1>Ride-on R15 V4 with Smile</h1>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.velit officia consequat duis
+                  enim velit
+                  mollit.</p>
+                <button class="btn btn-danger">Purchase</button>
+              </div>
+            </div>
+            <div class="col-12 col-md-6">
+              <img src="images/bike-1.png" class="d-block w-100" alt="...">
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item ">
+          <div class="row">
+            <div class="col-12 col-md-6 d-flex justify-content-center align-items-center">
+              <div>
+                <h1>Ride-on R15 V4 with Smile</h1>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.velit officia consequat duis
+                  enim velit
+                  mollit.</p>
+                <button class="btn btn-danger">Purchase</button>
+              </div>
+            </div>
+            <div class="col-12 col-md-6">
+              <img src="images/bike-1.png" class="d-block w-100" alt="...">
+            </div>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon bz-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+        <span class="carousel-control-next-icon bz-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
 
   </header>
   <!-- main  -->
