hot bikes section added

--- a/index.html
+++ b/index.html
@@ -108,6 +108,23 @@
   </header>
   <!-- main  -->
   <main>
+    <!-- hot bike section -->
+    <section class="text-start text-md-center mt-5 ">
+      <h3 class="h1">Hot Bike In This Year</h3>
+      <p class="text-danger">Our Best Collecton</p>
+      <hr class="border-danger w-25 mx-auto">
+      <div class="row row-cols-1 row-cols-ms-2 row-cols-md-3 g-5 ms-5 px-5">
+        <div>
+        <img  class="w-100" src="images/feature-bike.jpg" alt="">
+        </div>
+        <div>
+          <img  class="w-75" src="images/feature-bike.jpg" alt="">
+        </div>
+        <div>
+          <img class="w-100" src="images/feature-bike.jpg" alt="">
+        </div>
+      </div>
+    </section>
 
   </main>
   <!-- footer  -->
