--- a/index.html
+++ b/index.html
@@ -109,16 +109,16 @@
   <!-- main  -->
   <main>
     <!-- hot bike section -->
-    <section class="text-start text-md-center mt-5 ">
+    <section class="text-start text-md-center mt-5 mb-5 ">
       <h3 class="h1">Hot Bike In This Year</h3>
       <p class="text-danger">Our Best Collecton</p>
       <hr class="border-danger w-25 mx-auto">
       <div class="row row-cols-1 row-cols-ms-2 row-cols-md-3 g-5 ms-5 px-5">
         <div>
-        <img  class="w-100" src="images/feature-bike.jpg" alt="">
+          <img class="w-100" src="images/feature-bike.jpg" alt="">
         </div>
         <div>
-          <img  class="w-75" src="images/feature-bike.jpg" alt="">
+          <img class="w-75" src="images/feature-bike.jpg" alt="">
         </div>
         <div>
           <img class="w-100" src="images/feature-bike.jpg" alt="">
@@ -126,6 +126,43 @@
       </div>
     </section>
 
+    <!-- latest bikes section -->
+    <section class="text-center bg-info bg-opacity-10 rounded-5 pt-5 pb-5 ps-3 pe-3 ">
+      <h3 class="h1 pb-5">Latest Bikes</h3>
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="col">
+        <div class="card h-100">
+          <img src="images/bike-5.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+              content. This content is a little bit longer.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="images/bike-6.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a short card.with supporting text below as a natural lead-in to additional
+            content. This content is a little bit longer.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="images/bike-7.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+              content.</p>
+          </div>
+        </div>
+      </div>
+      </div>
+    </div>
+    </section>
   </main>
   <!-- footer  -->
   <footer>
