--- a/index.html
+++ b/index.html
@@ -305,13 +305,39 @@
           </div>
         </div>
       </div>
-
     </section>
   </main>
   <!-- footer  -->
-  <footer>
+  <footer class="bg-dark">
+    <div class="row row-cols-sm-1 row-cols-md-2 text-white p-5">
+      <div class="col-8 align-items-start ">
+        <div class="d-flex gap-4">
+          <h3>Download Now</h3>
+          <h3>License</h3>
+        </div>
+       <ul class="d-flex g-2">
+       <li>About</li>
+       <li>Features</li>
+       <li>Pricing</li>
+       <li>Careers</li>
+       <li>Help</li>
+       <li>Privacy Policy</li>
+      
+       </ul>
+        <P>© 2020 bike. All rights reserved</P>
+<!-- not complete  -->
+      </div>
+      <div class="col-4">
+        <h2>Get the App</h2>
+        <p><img class="w-50" src="images/android.png" alt=""></p>
+        <p><img class="w-50" src="images/android.png" alt=""></p>
+     
 
-  </footer>
+      </div>
+    </div>
+  
+
+  </footer >
 
 
 
